<resources>
    <!--    Labels-->
    <string name="app_name">Holmes</string>
    <string name="no_book_loaded">No book loaded</string>

    <!--    Buttons-->
    <string name="next_page_button">Next</string>
    <string name="previous_page_button">Back</string>
    <string name="load_book_button">Load Book</string>
    <string name="graph_button">Graph</string>
    <string name="characters_button">Characters</string>
    <string name="location_button">Locations</string>

    <!--    Error Messages-->
    <string name="error_extracting_names">There was an error extracting names</string>

    <!-- Other-->
    <string name="service_offline">Offline</string>
    <string name="service_online">Online</string>
    <string name="pieChart">Mention Pie Chart</string>
    <string name="lollipop_chart">Mention Lollipop Chart (NEW)</string>
    <string name="network">Character Network</string>


    <!--    Descriptions -->
    <string name="delete_symbol">Delete Symbol</string>
    <string name="book_cover_image">Book Cover Image</string>
    <string name="failed_processing">Failed Processing</string>
    <string name="EntityNameTvLabel">Name:</string>
    <string name="entityName">Name</string>
    <string name="entityNer">NER</string>
    <string name="entityNerLabel">Type:</string>

    <!--    Symbols-->
    <string name="percentage">%</string>
    <string name="defaultPercentage">100 %</string>
    <string name="top_links_percentage">Top Links:</string>
    <string name="top_characters_by_mentions">Top Characters:</string>
    <string name="distance_method">Distance Method</string>
    <string name="choose_distance_method">Choose Distance Method</string>
    <string name="choose_chapter">Choose chapter</string>
    <string name="item">Item</string>
</resources>